--- a/style4.css
+++ b/style4.css
@@ -68,17 +68,17 @@ h2{
 padding:20px;
 }
 
-.cont1{
+.box1{
 background:#ff5722;
 padding:15px;
 }
 
-.cont2{
+.box2{
 background:#4caf50;
 padding:15px;
 }
 
-.cont3{
+.box3{
 background:#2196f3;
 padding:15px;
 }
@@ -91,3 +91,9 @@ padding:10px;
 margin-top:30px;
 }
 
+.error{
+background:#9c27b0;
+color:white;
+text-align:center;
+padding:100px;
+}
