--- a/style4.css
+++ b/style4.css
@@ -1,7 +1,7 @@
 body{
 margin:0;
 font-family: cursive;
-background:#ffeb3b;
+color:yellow;
 }
 
 header{
@@ -91,9 +91,3 @@ padding:10px;
 margin-top:30px;
 }
 
-.error{
-background:#9c27b0;
-color:white;
-text-align:center;
-padding:100px;
-}
