--- a/style5.css
+++ b/style5.css
@@ -27,14 +27,14 @@ background:#00e5ff;
 text-align:center;
 padding:60px;
 }
-.line{
+.line a{
 color:rgb(255, 255, 255);
 margin:10px;
 text-decoration:none;
 font-weight:bold;
 padding: 45px;
 }
-.line:hover{
+.line a:hover{
 color:yellow;
 text-decoration:underline;
 }
